# se2c_rgbdw_slam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
data/NakBot/: kinect2_new.yaml
data/NakBot/parameter_tuning/: kinect2_new_-10_ProposedParamA.yaml  kinect2_new_-2_ProposedParamA.yaml  kinect2_new_-4_ProposedParamA.yaml  kinect2_new_-6_ProposedParamA.yaml  kinect2_new_-8_ProposedParamA.yaml  kinect2_new_0_ProposedParamA.yaml  kinect2_new_2_ProposedParamA.yaml  kinect2_new_Q_ProposedParamA.yaml  kinect2_new_Q_ProposedParamC.yaml
doc/: build.md
launch/: load_prebuild_octomap.launch  localization_rosbag_node.launch  robot_model.launch  slam_from_dump_node.launch  slam_from_dump_node_dre.launch  slam_from_rosbag_node.launch  slam_from_rosbag_node_dre_comparison.launch  slam_from_rosbag_node_dre_extension.launch
rviz/: octomap.rviz  rviz.rviz
scripts/: replace.sh  translate_trajectory.py
src/: CMakeLists.txt
src/include/: dataset_publisher.h  ros_publisher.h  slam_node.h  util.h
src/launch/: CMakeLists.txt  dummy_cloud_publisher.cc  localization_from_rosbag.cc  slam_from_dump.cc  slam_from_rosbag.cc
src/node/: ros_publisher.cc  slam_node.cc  util.cc
src/se2c_rgbdw_slam/: config.cc  config.h  config_se2_constraint.cc  config_se2_constraint.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  system.h  timer.h  tracking_module.cc  tracking_module.h  type.h
src/se2c_rgbdw_slam/camera/: base.cc  base.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h
src/se2c_rgbdw_slam/data/: bow_database.cc  bow_database.h  camera_database.cc  common.cc  common.h  encoder.h  frame.cc  frame.h  frame_statistics.cc  frame_statistics.h  graph_node.cc  keyframe.cc  keyframe.h  landmark.cc  landmark.h  map_database.cc  map_database.h  rgbd_frame.h  rgbd_frame_set.cc  rgbd_frame_set.h
src/se2c_rgbdw_slam/feature/: orb_extractor.cc  orb_extractor.h  orb_extractor_node.cc  orb_params.cc
src/se2c_rgbdw_slam/initialize/: base.cc  base.h  bearing_vector.cc  bearing_vector.h  perspective.cc  perspective.h
src/se2c_rgbdw_slam/io/: map_database_io.cc  map_database_io.h  trajectory_io.cc  trajectory_io.h
src/se2c_rgbdw_slam/match/: area.cc  area.h  bow_tree.cc  bow_tree.h  fuse.cc  fuse.h  projection.cc  projection.h  robust.cc  robust.h  stereo.cc  stereo.h
src/se2c_rgbdw_slam/module/: encoder_odometry.cc  encoder_odometry.h  frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  loop_bundle_adjuster.cc  loop_bundle_adjuster.h  loop_detector.cc  loop_detector.h  octomap_mapping.cc  octomap_mapping.h  plane_estimator.cc  plane_estimator.h  relocalizer.cc  relocalizer.h  two_view_triangulator.cc  two_view_triangulator.h  type.h
src/se2c_rgbdw_slam/optimize/: global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster.cc  local_bundle_adjuster.h  pose_optimizer.cc  pose_optimizer.h  transform_optimizer.cc  transform_optimizer.h
src/se2c_rgbdw_slam/optimize/g2o/: landmark_vertex.cc  landmark_vertex.h  landmark_vertex_container.cc  landmark_vertex_container.h
src/se2c_rgbdw_slam/optimize/g2o/se2constraint/: odometry_constraint_edge.cc  odometry_constraint_edge.h  odometry_constraint_wrapper.cc  odometry_constraint_wrapper.h  plane_constraint_edge.cc  plane_constraint_edge.h  plane_constraint_wrapper.cc  plane_constraint_wrapper.h
src/se2c_rgbdw_slam/optimize/g2o/se3/: equirectangular_pose_opt_edge.cc  equirectangular_pose_opt_edge.h  equirectangular_reproj_edge.cc  equirectangular_reproj_edge.h  perspective_pose_opt_edge.cc  perspective_pose_opt_edge.h  perspective_reproj_edge.cc  perspective_reproj_edge.h  pose_opt_edge_wrapper.h  reproj_edge_wrapper.h  shot_vertex.cc  shot_vertex.h  shot_vertex_container.cc  shot_vertex_container.h
src/se2c_rgbdw_slam/optimize/g2o/sim3/: backward_reproj_edge.cc  backward_reproj_edge.h  forward_reproj_edge.cc  forward_reproj_edge.h  graph_opt_edge.cc  graph_opt_edge.h  mutual_reproj_edge_wrapper.h  shot_vertex.cc  shot_vertex.h  transform_vertex.cc  transform_vertex.h
src/se2c_rgbdw_slam/publish/: frame_publisher.cc  frame_publisher.h  map_publisher.cc  map_publisher.h
src/se2c_rgbdw_slam/solve/: common.cc  common.h  essential_solver.cc  essential_solver.h  fundamental_solver.cc  fundamental_solver.h  homography_solver.cc  homography_solver.h  pnp_solver.cc  pnp_solver.h  sim3_solver.cc  sim3_solver.h  triangulator.h
src/se2c_rgbdw_slam/util/: converter.cc  converter.h  coordinate_transformer.cc  coordinate_transformer.h  fancy_index.h  image_converter.cc  image_converter.h  quaternion.cc  quaternion.h  random_array.cc  se2c.cc  se2c.h  stereo_rectifier.cc  stereo_rectifier.h
urdf/: color.urdf.xacro  imu.urdf.xacro  my_robo.xacro  my_robo_camera.urdf.xacro  my_robo_imu.xacro  my_robo_laser.urdf.xacro
